--- a/index.html
+++ b/index.html
@@ -80,6 +80,26 @@
         </div>
     </div>
 
+    <!-- About Section -->
+    <section class="relative py-20 bg-cover bg-center" style="background-image: url('http://static.photos/architecture/1200x630/15');">
+        <div class="absolute inset-0 bg-black bg-opacity-50"></div>
+        <div class="relative container mx-auto px-6">
+            <div class="bg-white p-8 rounded-xl shadow-lg max-w-2xl mx-auto">
+                <h2 class="text-4xl font-bold text-orange-600 mb-4">About Venkateshwar Corporation</h2>
+                <div class="w-20 h-1 bg-orange-500 mx-auto mb-6"></div>
+                <p class="text-gray-700 mb-6">
+                    Venkateshwar Corporation is a leading provider of innovative tensile membrane solutions, specializing in architectural excellence and functional beauty. With years of experience in the industry, we combine cutting-edge technology with artistic vision to create exceptional tensile structures that transform spaces.
+                </p>
+                <p class="text-gray-700 mb-6">
+                    Our commitment to quality, durability, and customer satisfaction has made us a trusted partner for projects ranging from small canopies to large-scale structures. We pride ourselves on delivering solutions that not only meet but exceed our clients' expectations.
+                </p>
+                <a href="#products" class="bg-orange-500 hover:bg-orange-600 text-white font-bold py-3 px-8 rounded-full transition-all duration-300 transform hover:scale-105 shadow-lg inline-block">
+                    Learn More About Our Products
+                </a>
+            </div>
+        </div>
+    </section>
+
     <!-- Stacked Cards Section -->
     <section id="products" class="py-20 bg-orange-500 relative">
         <div class="container mx-auto px-6">
@@ -91,34 +111,34 @@
                 </p>
             </div>
 
-            <div class="relative overflow-hidden rounded-xl shadow-2xl">
+            <div class="relative overflow-hidden rounded-xl shadow-2xl max-w-2xl mx-auto">
                 <div id="product-slider" class="flex transition-transform duration-500 ease-in-out">
                     <div class="slide flex-shrink-0 w-full aspect-square relative group">
-                        <img src="http://static.photos/architecture/1200x630/10" alt="Tensioned Membrane Roofs" class="w-full h-full object-cover">
+                        <img src="images/hero1.webp" alt="Tensioned Membrane Roofs" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 translate-y-4 group-hover:opacity-100 group-hover:translate-y-0 transition-all duration-300">
                             <h3 class="text-white text-3xl font-bold animate__animated animate__zoomIn">Tensioned Membrane Roofs</h3>
                         </div>
                     </div>
                     <div class="slide flex-shrink-0 w-full aspect-square relative group">
-                        <img src="http://static.photos/architecture/1200x630/11" alt="Canopy Systems" class="w-full h-full object-cover">
+                        <img src="images/hero2.webp" alt="Canopy Systems" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 translate-y-4 group-hover:opacity-100 group-hover:translate-y-0 transition-all duration-300">
                             <h3 class="text-white text-3xl font-bold animate__animated animate__zoomIn">Canopy Systems</h3>
                         </div>
                     </div>
                     <div class="slide flex-shrink-0 w-full aspect-square relative group">
-                        <img src="http://static.photos/architecture/1200x630/12" alt="Facade Systems" class="w-full h-full object-cover">
+                        <img src="images/hero3.webp" alt="Facade Systems" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 translate-y-4 group-hover:opacity-100 group-hover:translate-y-0 transition-all duration-300">
                             <h3 class="text-white text-3xl font-bold animate__animated animate__zoomIn">Facade Systems</h3>
                         </div>
                     </div>
                     <div class="slide flex-shrink-0 w-full aspect-square relative group">
-                        <img src="http://static.photos/architecture/1200x630/13" alt="Tensioned Cables" class="w-full h-full object-cover">
+                        <img src="images/hero4.jpg" alt="Tensioned Cables" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 translate-y-4 group-hover:opacity-100 group-hover:translate-y-0 transition-all duration-300">
                             <h3 class="text-white text-3xl font-bold animate__animated animate__zoomIn">Tensioned Cables</h3>
                         </div>
                     </div>
                     <div class="slide flex-shrink-0 w-full aspect-square relative group">
-                        <img src="http://static.photos/architecture/1200x630/14" alt="Modular Structures" class="w-full h-full object-cover">
+                        <img src="images/hero5.jpg" alt="Modular Structures" class="w-full h-full object-cover">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-center justify-center opacity-0 translate-y-4 group-hover:opacity-100 group-hover:translate-y-0 transition-all duration-300">
                             <h3 class="text-white text-3xl font-bold animate__animated animate__zoomIn">Modular Structures</h3>
                         </div>
