--- a/index.html
+++ b/index.html
@@ -385,12 +385,72 @@
             </div>
           </div>
           <!-- Repeat for all 7 cards with increasing delay -->
-          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="200">...</div>
-          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="300">...</div>
-          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="400">...</div>
-          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="500">...</div>
-          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="600">...</div>
-          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="700">...</div>
+          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="200">
+          <div class="relative overflow-hidden">
+            <img src="home-product-images/industrial shed.jpg" alt="Industrial" class="w-full aspect-square object-cover">
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3 class="overlay-title">Industrial Shed</h3>
+                <p class="overlay-desc">Heavy-duty tensile fabric sheds<br>for factories & warehouses</p>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="300"><div class="relative overflow-hidden">
+            <img src="home-product-images/car parking.jpg" alt="Car Parking" class="w-full aspect-square object-cover">
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3 class="overlay-title">Car Parking Shed </h3>
+                <p class="overlay-desc">Durable and UV-resistant car parking sheds designed to protect vehicles from sun, rain, and dust.</p>
+
+              </div>
+            </div>
+          </div>
+</div>
+          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="400"><div class="relative overflow-hidden">
+            <img src="home-product-images/tensile structure.jpg" alt="Terrace" class="w-full aspect-square object-cover">
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3 class="overlay-title">Tensile Structure</h3>
+<p class="overlay-desc">Versatile and durable tensile roofing solutions designed for all-weather protection and modern aesthetics.</p>
+
+              </div>
+            </div>
+          </div>
+</div>
+          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="500"> <div class="relative overflow-hidden">
+            <img src="home-product-images/fabrication.jpg" alt="Stadium" class="w-full aspect-square object-cover">
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3 class="overlay-title">Fabrication</h3>
+<p class="overlay-desc">Expert tensile membrane fabrication built for wide-span stadium and arena coverage.</p>
+
+              </div>
+            </div>
+          </div>
+</div>
+          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="600"> <div class="relative overflow-hidden">
+            <img src="home-product-images/prefabricated.jpg" alt="Pool" class="w-full aspect-square object-cover">
+            <div class="overlay">
+              <div class="overlay-content">
+               <h3 class="overlay-title">Prefabricated</h3>
+<p class="overlay-desc">High-quality prefabricated tensile enclosures designed for pools, outdoor lounges, and premium spaces.</p>
+
+              </div>
+            </div>
+          </div>
+</div>
+          <div class="product-card flex-shrink-0 w-80 mx-4" data-aos="flip-left" data-aos-delay="700"><div class="relative overflow-hidden">
+            <img src="home-product-images/car parking awning.jpg" alt="Walkway" class="w-full aspect-square object-cover">
+            <div class="overlay">
+              <div class="overlay-content">
+                <h3 class="overlay-title">Car Parking Awning</h3>
+<p class="overlay-desc">Durable tensile awnings designed to protect vehicles from sun, rain, and harsh weather.</p>
+
+              </div>
+            </div>
+          </div>
+        </div></div>
         </div>
 
         <button id="prev-btn" class="arrow-btn left-4" data-aos="fade-right" data-aos-delay="300">
