--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@ overlay.addEventListener("click", closeNavbar);
     </div>
 
     <div class="slide absolute inset-0">
-      <img src="images/about hero.jpg class="w-full h-full object-cover" />
+      <img src="images/hero3.webp" class="w-full h-full object-cover" />
     </div>
 
     <div class="slide absolute inset-0">
@@ -526,9 +526,9 @@ const subtitles = [
 ];
 
 const thumbnails = [
-  "images/hero1.webp",
-  "images/hero2.webp",
+  "images/about hero2.jpg",
   "images/hero3.webp",
+  "images/about hero4.jpg",
   "images/hero4.jpg"
 ];
 
