--- a/contact.html
+++ b/contact.html
@@ -70,90 +70,198 @@
 }#navbar {
   transform: translateY(-150%);
 }
-  </style>
-</head>
-<body class="bg-gradient-to-b from-slate-900 to-slate-800 text-white overflow-x-hidden">
-
-  <!-- TOP-CENTER TRIGGER BUTTON -->
-<nav class="fixed top-4 left-1/2 -translate-x-1/2 z-[200]">
-  <button id="nav-open"
-    class="w-12 h-12 flex items-center justify-center rounded-full 
-           bg-white text-black text-2xl shadow-md">
-    ☰
-  </button>
-</nav>
-
-<!-- OVERLAY -->
-<div id="nav-overlay"
-     class="fixed inset-0 bg-black/40 backdrop-blur-sm 
-            z-[150] opacity-0 pointer-events-none">
-</div>
-
-<!-- SLIDING NAVBAR (NOW WHITE + CENTERED) -->
-<div id="navbar"
-     class="fixed top-0 left-[20%] -translate-x-1/2 
-            w-[90%] md:w-[70%] lg:w-[60%]
-            bg-white text-black shadow-2xl rounded-2xl z-[300]
-            py-4 px-6 flex items-center justify-between
-            translate-y-[-150%]">
-
-  <!-- LOGO -->
-  <img src="logo.jpg" 
-     alt="VC Designs Logo" 
-     class="h-10 md:h-12 object-contain">
-
-
-  <!-- MENU ITEMS -->
-  <ul class="hidden md:flex space-x-8 text-lg">
-    <li><a href="index.html" class="hover:text-black">Home</a></li>
-    <li><a href="about.html" class="hover:text-black">About</a></li>
-    <li><a href="products.html" class="hover:text-black">Products</a></li>
-    <li><a href="contact.html" class="hover:text-black">Contact</a></li>
-  </ul>
-
-  <!-- CLOSE BUTTON -->
-  <button id="nav-close" class="text-4xl leading-none text-black">&times;</button>
-</div>
-
-<script>
-const openBtn = document.getElementById("nav-open");
-const closeBtn = document.getElementById("nav-close");
-const navbar = document.getElementById("navbar");
-const overlay = document.getElementById("nav-overlay");
-
-// OPEN NAVBAR
-openBtn.addEventListener("click", () => {
-  gsap.to(navbar, {
-    y: 0,
-    duration: 0.9,
-    ease: "bounce.out"
-  });
-
-  gsap.to(overlay, {
-    opacity: 1,
-    pointerEvents: "all",
-    duration: 0.3
-  });
-});
-
-// CLOSE NAVBAR
-function closeNavbar() {
-  gsap.to(navbar, {
-    y: "-150%",
-    duration: 0.5,
-    ease: "power3.inOut"
-  });
-
-  gsap.to(overlay, {
-    opacity: 0,
-    pointerEvents: "none",
-    duration: 0.3
-  });
+ .slider-track {
+    animation: slide-up 14s linear infinite;
+}
+:root{
+  --navy: #071433;      /* change this to match your logo's navy */
+  --edge-white: #ffffff;
 }
 
-closeBtn.addEventListener("click", closeNavbar);
-overlay.addEventListener("click", closeNavbar);
-</script>
+/* NAV BACKGROUND: dark center fading to white both sides */
+.nav-gradient {
+  position: relative;
+  /* The gradient centers a dark band and fades to white at the edges.
+     Tweak the stop percentages to widen / narrow the dark band. */
+  background: linear-gradient(
+    to right,
+    var(--edge-white) 0%,
+    var(--edge-white) 18%,
+    rgba(255,255,255,0.9) 28%,
+    var(--navy) 50%,
+    rgba(255,255,255,0.9) 72%,
+    var(--edge-white) 82%,
+    var(--edge-white) 100%
+  );
+  box-shadow: 0 2px 10px rgba(10,10,10,0.06);
+  z-index: 100;
+}
+
+/* Make sure nav content sits above the gradient band */
+.site-nav > .max-w-7xl { position: relative; }
+
+/* Links style (dark by default so they are visible on white edges) */
+.nav-link {
+  color: var(--navy);
+  text-decoration: none;
+  transition: color .18s ease, transform .12s ease;
+}
+.nav-link:hover { color: #1f3f66; transform: translateY(-1px); }
+
+/* Logo sizing */
+.logo-wrap .logo-img {
+  height: 64px;        /* increase if you want bigger logo */
+  width: auto;
+  display: block;
+  pointer-events: none;
+  /* add subtle border / background to sit clearly on dark band if needed */
+  /* background: rgba(255,255,255,0.03); padding: 6px; border-radius: 10px; */
+}
+
+/* Optional: give dark band slightly taller area vertically
+   so the logo sits perfectly and the fade feels natural. */
+.site-nav {
+  padding-top: 1rem;   /* increases navbar height */
+  padding-bottom: 1rem;
+}
+
+/* RESPONSIVE: on small screens, reduce gradient complexity */
+@media (max-width: 768px) {
+  .nav-gradient {
+    background: linear-gradient(
+      to right,
+      var(--edge-white) 0%,
+      var(--edge-white) 22%,
+      var(--navy) 50%,
+      var(--edge-white) 78%,
+      var(--edge-white) 100%
+    );
+  }
+
+  .logo-wrap .logo-img { height: 52px; }
+  .nav-left, .nav-right { gap: 10px; font-size: 14px; }
+}
+
+/* If you have transparent navbar on scroll, use this to keep readability */
+.site-nav.scrolled {
+  backdrop-filter: blur(6px);
+}
+@keyframes scroll-left {
+  0% { transform: translateX(0); }
+  100% { transform: translateX(-50%); }
+}
+
+.scroll-text {
+  display: inline-flex;
+  white-space: nowrap;
+  will-change: transform;
+}
+</style>
+
+
+</style>
+</head>
+<body class="bg-white text-white">
+
+  
+
+  
+
+<!-- TOP CONTACT BAR -->
+<div class="w-full bg-white text-black text-sm py-2 border-b overflow-hidden relative">
+
+  <div class="scroll-text whitespace-nowrap flex items-center"
+       style="animation: scroll-left 18s linear infinite;">
+    
+    <span class="mx-6">
+      venkateshwaracorporation@gmail.com &nbsp;&nbsp; | &nbsp;&nbsp; +91 8830439424
+    </span>
+
+    <span class="mx-6">
+      venkateshwaracorporation@gmail.com &nbsp;&nbsp; | &nbsp;&nbsp; +91 8830439424
+    </span>
+
+    <span class="mx-6">
+      venkateshwaracorporation@gmail.com &nbsp;&nbsp; | &nbsp;&nbsp; +91 8830439424
+    </span>
+
+    <!-- duplicate more for smoother infinite loop -->
+    <span class="mx-6">
+      venkateshwaracorporation@gmail.com &nbsp;&nbsp; | &nbsp;&nbsp; +91 8830439424
+    </span>
+
+  </div>
+
+</div>
+
+
+<!-- MAIN NAVBAR -->
+<nav class="site-nav nav-gradient relative py-4">
+  <div class="max-w-7xl mx-auto px-6 flex items-center justify-between relative">
+
+    <!-- LEFT MENU -->
+<div class="nav-left flex space-x-8 font-semibold text-lg z-10">
+
+  <!-- INTERIORS DROPDOWN -->
+  <div class="relative group">
+    <a href="#" class="nav-link">Interiors ▾</a>
+
+    <!-- Dropdown Menu -->
+    <div class="absolute hidden group-hover:block bg-white text-black shadow-xl rounded-lg py-4 px-6 w-64">
+      <h4 class="font-bold mb-2 text-gray-700">Interiors</h4>
+      <ul class="space-y-2 text-sm">
+        <li>Furniture Work</li>
+        <li>Plumbing Work</li>
+        <li>Electrical Work</li>
+        <li>Tile Work</li>
+        <li>Painting</li>
+        <li>Internal Modification</li>
+        <li>Internal Home Changes</li>
+        <li>POP House</li>
+        <li>Sliding Windows</li>
+        <li>French Doors</li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- SERVICES DROPDOWN -->
+  <div class="relative group">
+    <a href="#" class="nav-link"> Other Services ▾</a>
+
+    <!-- Dropdown Menu -->
+    <div class="absolute hidden group-hover:block bg-white text-black shadow-xl rounded-lg py-4 px-6 w-64">
+      
+
+      <h4 class="font-bold mt-4 mb-2 text-gray-700">Other Services</h4>
+      <ul class="space-y-2 text-sm">
+        <li>Waterproofing</li>
+        <li>Housekeeping</li>
+        <li>Society Maintenance AMC</li>
+        <li>Pest Control</li>
+        <li>Gardening</li>
+        <li>Anti-Bird Netting</li>
+      </ul>
+    </div>
+  </div>
+
+</div>
+
+
+    <!-- CENTER LOGO (on top of the dark band) -->
+    <div class="logo-wrap absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 z-20 pointer-events-none">
+      <img src="logo.jpg" alt="logo" class="logo-img" />
+    </div>
+
+    <!-- RIGHT MENU -->
+    <div class="nav-right flex space-x-8 font-semibold text-lg z-10">
+      <a href="index.html" class="nav-link">Home</a>
+      <a href="about.html" class="nav-link">About</a>
+      <a href="products.html" class="nav-link">Product</a>
+      <a href="contact.html" class="nav-link">Contact</a>
+    </div>
+
+  </div>
+</nav>
 
  <!-- CINEMATIC HERO WITH ZOOM-IN IMAGE + TYPEWRITER -->
 <section class="relative overflow-hidden h-screen ">
@@ -192,13 +300,13 @@ overlay.addEventListener("click", closeNavbar);
     </p>
 
     <!-- BREADCRUMB -->
-    <div class="flex items-center gap-4 font-medium text-lg" style="color: var(--gold);">
+    <!-- <div class="flex items-center gap-4 font-medium text-lg" style="color: var(--gold);">
       <a href="index.html" class="hover:underline">Home</a>
       <svg class="w-5 h-5" fill="currentColor" viewBox="0 0 20 20">
         <path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z"/>
       </svg>
       <span>Contact</span>
-    </div>
+    </div> -->
 
     <!-- GOLD CTA BUTTON -->
     <!-- <a href="#contact-form" 
@@ -299,19 +407,30 @@ overlay.addEventListener("click", closeNavbar);
 
           <h3 class="text-3xl font-bold mb-8 text-[var(--navy)]">Get in <span class="text-[var(--gold)]">Touch</span></h3>
          <form action="https://formspree.io/f/your-form-id" method="POST" class="space-y-6">
+
   <input type="text" name="name" placeholder="Your Name" required
          class="w-full px-5 py-4 border border-gray-300 rounded-xl focus:ring-4 focus:ring-yellow-200 outline-none text-base">
+
   <input type="email" name="email" placeholder="Your Email" required
          class="w-full px-5 py-4 border border-gray-300 rounded-xl focus:ring-4 focus:ring-yellow-200 outline-none text-base">
+
+  <!-- ✅ NEW CONTACT FIELD -->
+  <input type="tel" name="contact" placeholder="Your Contact Number" required
+         class="w-full px-5 py-4 border border-gray-300 rounded-xl focus:ring-4 focus:ring-yellow-200 outline-none text-base">
+
   <input type="text" name="subject" placeholder="Subject"
          class="w-full px-5 py-4 border border-gray-300 rounded-xl focus:ring-4 focus:ring-yellow-200 outline-none text-base">
+
   <textarea name="message" rows="5" placeholder="Your Message" required
             class="w-full px-5 py-4 border border-gray-300 rounded-xl focus:ring-4 focus:ring-yellow-200 outline-none text-base resize-none"></textarea>
+
   <button type="submit"
           class="w-full py-4 text-lg font-semibold bg-[var(--gold)] text-[var(--navy)] rounded-xl shadow-md hover:bg-yellow-600 transition transform hover:scale-[1.02]">
     Send Message
   </button>
+
 </form>
+
 
         </div>
       </div>
@@ -345,13 +464,22 @@ gsap.from("#contact-right", {
 });
 </script>
 
-  <!-- MAP -->
   <section class="pb-20 bg-white">
-    <div class="container mx-auto px-6 max-w-6xl ">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3779.6771072250162!2d73.80292127519552!3d18.678480082445933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDQwJzQyLjUiTiA3M8KwNDgnMTkuOCJF!5e0!3m2!1sen!2sin!4v1762491597112!5m2!1sen!2sin" width="100%" height="400" style="border:0;" allowfullscreen="" 
+  <div class="container mx-auto px-6 max-w-6xl">
+
+    <h2 class="text-4xl font-bold text-center mb-4 text-gray-800">
+      Visit <span class="text-yellow-500">Venkateshwara Corporation</span>
+    </h2>
+    <p class="text-center text-gray-500 max-w-xl mx-auto mb-10">
+      Find our exact location on the map below.
+    </p>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3779.6771072250162!2d73.80292127519552!3d18.678480082445933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMTjCsDQwJzQyLjUiTiA3M8KwNDgnMTkuOCJF!5e0!3m2!1sen!2sin!4v1762491597112!5m2!1sen!2sin"
+      width="100%" height="400" style="border:0;" allowfullscreen
       loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-  </section>
+  </div>
+</section>
+
 
   <!-- FOOTER -->
   <footer class="bg-slate-900 text-white relative overflow-hidden">
@@ -435,9 +563,9 @@ gsap.from("#contact-right", {
     </div>
 
     <!-- COPYRIGHT -->
-    <div class="text-center mt-8 pt-5 border-t border-slate-800 text-xs opacity-70"
+    <div class="text-center mt-8 pt-5 border-t border-slate-800 text-sm opacity-70"
          data-aos="fade-up" data-aos-delay="400">
-      © 2025 Venkateshwara Corporation • Developed by DWInnovations Pvt. Ltd. • Pune
+      © 2025 Venkateshwara Corporation • <a href="https://dwi4u.com/">Developed by DW Innovation Pvt. Ltd. • Pune</a>
     </div>
   </div>
 </footer>
