--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@ footer [data-aos] {
     <div class="nav-right flex space-x-8 font-semibold text-lg z-10">
       <a href="index.html" class="nav-link">Home</a>
       <a href="about.html" class="nav-link">About</a>
-      <a href="products.html" class="nav-link">Blog</a>
+      <a href="products.html" class="nav-link">Product</a>
       <a href="contact.html" class="nav-link">Contact</a>
     </div>
 
